--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
