--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "element-china-area-data": "^5.0.2",
     "element-ui": "^2.15.9",
     "jquery": "^3.6.0",
+    "jszip": "^3.10.1",
     "leaflet": "^1.7.1",
     "ol": "^6.5.0",
     "ol-ext": "^3.2.2",
+    "shapefile": "^0.6.6",
     "sockjs": "^0.3.21",
     "sockjs-client": "^1.5.1",
     "stompjs": "^2.3.3",
